# compilers_course_4sem_2020

./: README.md
milestone1_naive_interpreter/: CMakeLists.txt  driver.cpp  driver.hh  parser.y  (+1 more)
milestone2_ast_tree/src/: CMakeLists.txt  driver.cpp  driver.hh  location.hh  main.cpp  parser.cpp  parser.hh  parser.y  scanner.cpp  scanner.h
milestone5_functions/: .run.txt.swp  CMakeLists.txt  debug.cpp  debug.h  debug_output.txt  driver.cpp  driver.hh  location.hh  parser.cpp  parser.hh  parser.y  run.txt  run_tests  scanner.cpp
milestone5_functions/include/declarations/: MethodDecl.hpp  VarDecl.cpp  VarDecl.hpp
milestone5_functions/include/expressions/: NotExpr.hpp  ThisExpr.cpp
milestone5_functions/include/functions/: Frame.cpp  Frame.hpp  FunctionStorage.cpp  FunctionStorage.hpp  FunctionTable.cpp  FunctionTable.hpp  MethodInvocation.cpp  MethodInvocation.hpp
milestone5_functions/include/functions/akht/: FunctionTable.cpp
milestone5_functions/include/scopes/: ScopeLayer.cpp  ScopeLayer.hpp  ScopeLayerTree.cpp  ScopeLayerTree.hpp  Table.cpp
milestone5_functions/include/statements/: AssertStmt.hpp  AssignmentStmt.cpp  MethodStmt.hpp  StmtListStmt.hpp
milestone5_functions/include/types/: Class.cpp  Class.hpp  Function.cpp  Function.hpp  FunctionType.cpp  FunctionType.hpp  Object.hpp  Type.cpp  Type.hpp
milestone5_functions/include/types/constructor/: BoolBuilder.cpp  ClassBuilder.cpp  ClassBuilder.hpp  Constructor.cpp  Constructor.hpp  IntegerBuilder.cpp  IntegerBuilder.hpp
milestone5_functions/include/utils/: BasicElement.cpp  BasicElement.hpp  ExceptionGuy.cpp  ExceptionGuy.hpp  elements.hpp  forward_decl.hpp
milestone5_functions/include/visitors/: Interpreter.cpp  Interpreter.hpp  PrintVisitor.cpp  PrintVisitor.hpp  SymbolTreeVisitor.cpp  SymbolTreeVisitor.hpp  Visitor.hpp
milestone5_functions/test/: simple_test.in  test10_many_decls_and_assigns.in  test11_factorial.in  test3_double_decl.in  test4_uninit_var.in  test6_correct_scope.in  test7_bad_scopes.in  test8_functions.in  test9_functions_long.in
milestone5_functions/test_output/: .test11_factorial.in_tree_debug.txt.swp  .test9_functions_long.in_tree_debug.txt.swp  simple_test.in_tree_debug.txt  test1.in_tree  test1.in_tree_debug.txt  test10_many_decls_and_assigns.in_tree_debug.txt  test11_factorial.in_tree  test11_factorial.in_tree_debug.txt  test12_function_with_if.in_tree  test12_function_with_if.in_tree_debug.txt  test2.in_tree  test2.in_tree_debug.txt  test3_double_decl.in_tree_debug.txt  test4_uninit_var.in_tree_debug.txt  test5_wrong_scope.in_tree  test5_wrong_scope.in_tree_debug.txt  test6_correct_scope.in_tree  test6_correct_scope.in_tree_debug.txt  test7_bad_scopes.in_tree  test7_bad_scopes.in_tree_debug.txt  test8_functions.in_tree  test8_functions.in_tree_debug.txt  test9_functions_long.in_tree  test9_functions_long.in_tree_debug.txt
milestone8_blocks/: CMakeLists.txt  driver.cpp  location.hh  parser.cpp  parser.hh  run.txt  scanner.cpp
milestone8_blocks/include/expressions/: IdentExpr.cpp  LengthExpr.cpp  MethodExpr.hpp  ThisExpr.hpp
milestone8_blocks/include/functions/: FunctionStorage.cpp
milestone8_blocks/include/functions/address/: AddressInFrame.hpp_old
milestone8_blocks/include/irtree/: elements.hpp  forward_decl.hpp
milestone8_blocks/include/irtree/blocks/: Block.cpp  Block.hpp  BlockTree.cpp  BlockTree.hpp  NodeAdapter.cpp  Trace.cpp  Trace.hpp
milestone8_blocks/include/irtree/nodes/: ExpressionList.cpp  ExpressionList.hpp
milestone8_blocks/include/irtree/nodes/expressions/: ConstExpression.cpp  Expression.hpp
milestone8_blocks/include/irtree/nodes/statements/: ExpStatement.cpp  SeqStatement.cpp
milestone8_blocks/include/irtree/tree_wrappers/: ExpressionWrapper.cpp
milestone8_blocks/include/irtree/types/: BinaryOperatorType.hpp  LogicOperatorType.cpp
milestone8_blocks/include/irtree/visitors/: BuildBlocksVisitor.cpp  EseqEliminationVisitor.cpp  IdentVisitor.hpp  LinearizeVisitor.hpp  TemplateVisitor.cpp
milestone8_blocks/include/scopes/: Symbol.cpp
milestone8_blocks/include/statements/: ConditionalStmt.hpp
milestone8_blocks/include/types/: Class.cpp  Function.cpp  FunctionType.cpp  Object.cpp
milestone8_blocks/include/types/constructor/: Constructor.cpp
milestone8_blocks/include/value_categories/: Lvalue.hpp
milestone8_blocks/include/visitors/: Interpreter.cpp  Visitor.hpp
milestone8_blocks/test/: test11_factorial.java  test13_double_call.java
milestone8_blocks/test_output/: simple_test.java_tree_blocks  simple_test.java_tree_debug.txt  simple_test.java_tree_irtree  simple_test.java_tree_irtree_traces  test1.java_tree_blocks  test1.java_tree_debug.txt  test1.java_tree_irtree  test1.java_tree_irtree.txt_blocks  test1.java_tree_irtree_blocks  test1.java_tree_irtree_linear.txt  test10_many_decls_and_assigns.java_tree_blocks  test10_many_decls_and_assigns.java_tree_debug.txt  test10_many_decls_and_assigns.java_tree_irtree  test10_many_decls_and_assigns.java_tree_irtree.txt_blocks  test10_many_decls_and_assigns.java_tree_irtree_blocks  test10_many_decls_and_assigns.java_tree_irtree_traces  test11_factorial.java_tree_debug.txt  test11_factorial.java_tree_irtree  test11_factorial.java_tree_irtree.txt_blocks  test11_factorial.java_tree_irtree_blocks  test11_factorial.java_tree_irtree_traces  test12_function_with_if.java_tree_blocks  test12_function_with_if.java_tree_debug.txt  test12_function_with_if.java_tree_irtree  test12_function_with_if.java_tree_irtree.txt_blocks  test12_function_with_if.java_tree_irtree_linear.txt  test13_double_call.java_tree  test13_double_call.java_tree_blocks  test13_double_call.java_tree_debug.txt  test13_double_call.java_tree_irtree  test13_double_call.java_tree_irtree.txt_blocks  test13_double_call.java_tree_irtree_linear.txt  test13_double_call.java_tree_irtree_traces  test14_cjump.java_tree_blocks  test14_cjump.java_tree_debug.txt  test14_cjump.java_tree_irtree  test14_cjump.java_tree_irtree.txt  test14_cjump.java_tree_irtree.txt_blocks  test14_cjump.java_tree_irtree_linear.txt  test14_cjump.java_tree_irtree_traces  (+38 more)
(+506 files in other folders)
